--- a/XamarinToDoApp/XamarinToDoApp/XamarinToDoApp/XamarinToDoApp.csproj
+++ b/XamarinToDoApp/XamarinToDoApp/XamarinToDoApp/XamarinToDoApp.csproj
@@ -5,6 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Realm" Version="3.1.0" />
     <PackageReference Include="Xamarin.Forms" Version="3.0.0.561731" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="FodyWeavers.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
