Fixed compilation bug

--- a/XamarinToDoApp/XamarinToDoApp/XamarinToDoApp/XamarinToDoApp.csproj
+++ b/XamarinToDoApp/XamarinToDoApp/XamarinToDoApp/XamarinToDoApp.csproj
@@ -14,4 +14,10 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="View\ItemEntriesPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
 </Project>
